CHANGES IN VERSION 1.5.14
------------------------
 o as.polytomy to collapse binary tree to polytomy by applying 'fun' to selected 'feature' (e.g. bootstrap value less than 70). <2016-09-13, Tue>
   + currently only phylo object supported.
   + add test for as.polytomy
   
CHANGES IN VERSION 1.5.13
------------------------
 o facet_plot for plotting data with tree <2016-09-06, Tue>
 o more parameters for column names in gheatmap <2016-09-06, Tue>
   + colnames_angle
   + colnames_offset_x
   + colnames_offset_y
   + hjust
 o offset parameter in geom_tiplab and geom_tiplab2 <2016-09-05, Mon>
 
CHANGES IN VERSION 1.5.12
------------------------
 o use data in all layers instead of the base layer for coordination calculation in subview <2016-09-01, Thu>
 o bug fixed in subview, width & height should be width/2 & height/2 <2016-09-01, Thu>
 
CHANGES IN VERSION 1.5.11
------------------------
 o gheatmap works with matrix <2016-08-28, Sun>
   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!msg/bioc-ggtree/2YLvXHMJJ6U/c4zS7yfGCAAJ
 o support parsing expression in geom_strip <2016-08-18, Thu>
 o bug fixed in geom_tiplab <2016-08-17, Wed>
   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!msg/bioc-ggtree/Tm9ULK7hd9E/HviXEh3CBwAJ
 o update citation info, add doi. <2016-08-16, Tue>
 
CHANGES IN VERSION 1.5.10
------------------------
 o fixed issue #72 for label of geom_treescale not displayed <2016-08-16, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/72
 
CHANGES IN VERSION 1.5.9
------------------------
 o update citation info <2016-08-12, Fri>
 
CHANGES IN VERSION 1.5.8
------------------------
 o add color parameter in geom_cladelabel, color should be of length 1 or 2 <2016-08-11, Thu>
 o geom_cladelabel support parsing expression <2016-08-11, Thu>
 
CHANGES IN VERSION 1.5.7
------------------------
 o geom_strip can accept taxa name as input but labeling strip will not supported.