@@ -557,16 +557,16 @@ as.data.frame.phylo_ <- function(x, layout="rectangular",
     ## add branch mid position
     res <- calculate_branch_mid(res)
 
-    ## angle for all layout, if 'rectangular', user use coord_polar, can still use angle
-    ## if (layout == "circular") {
-    idx <- match(1:N, order(res$y))
-    ## angle <- -360/(3+N) * (1:N+1)
-    angle <- 360/(3+N) * (1:N+1)
-    angle <- angle[idx]
-    ## res$angle <- angle + 90
-    res$angle <- angle
+    ## ## angle for all layout, if 'rectangular', user use coord_polar, can still use angle
+    ## ## if (layout == "circular") {
+    ## idx <- match(1:N, order(res$y))
+    ## ## angle <- -360/(3+N) * (1:N+1)
+    ## angle <- 360/(3+N) * (1:N+1)
+    ## angle <- angle[idx]
+    ## ## res$angle <- angle + 90
+    ## res$angle <- angle
     ## } 
-    
+    res$angle <- 360/(diff(range(res$y)) + 1) * res$y
     return(res)
 }
 
